tests/semantic_errors/andrei3_4.tl
require "ifj21"

function main()
    local id : string = 12.90
end

main()
